[FIX] General readability of the text

--- a/source/app/static/assets/css/atlantis.css
+++ b/source/app/static/assets/css/atlantis.css
@@ -64,7 +64,7 @@
 
 # [Color codes]
 
-body-text-color: #575962
+body-text-color: #3c3d40
 white-color: #ffffff
 black-color: #191919
 transparent-bg : transparent
@@ -116,7 +116,7 @@ button.close {
 
 body {
     font-size: 14px;
-    color: #575962;
+    color: #3c3d40;
 }
 
 a {
@@ -487,7 +487,7 @@ body {
 }
 
 .logo-header .logo {
-    color: #575962;
+    color: #3c3d40;
     opacity: 1;
     position: relative;
     height: 100%;
@@ -539,7 +539,7 @@ body {
     line-height: 20px;
     padding: 0px !important;
     background: transparent !important;
-    color: #575962 !important;
+    color: #3c3d40 !important;
 }
 
 .btn-toggle:hover,
@@ -721,7 +721,7 @@ body {
 
 .sidebar .nav>.nav-item.active>a,
 .sidebar[data-background-color="white"] .nav>.nav-item.active>a {
-    color: #575962 !important;
+    color: #3c3d40 !important;
 }
 
 .sidebar .nav>.nav-item.active>a:before,
@@ -731,7 +731,7 @@ body {
 
 .sidebar .nav>.nav-item.active>a p,
 .sidebar[data-background-color="white"] .nav>.nav-item.active>a p {
-    color: #575962 !important;
+    color: #3c3d40 !important;
     font-weight: 600;
 }
 
@@ -762,7 +762,7 @@ body {
 .sidebar[data-background-color="white"] .nav>.nav-item a {
     display: flex;
     align-items: center;
-    color: #575962;
+    color: #3c3d40;
     padding: 6px 25px;
     width: 100%;
     font-size: 14px;
@@ -782,7 +782,7 @@ body {
 .sidebar .nav>.nav-item a:focus p,
 .sidebar[data-background-color="white"] .nav>.nav-item a:hover p,
 .sidebar[data-background-color="white"] .nav>.nav-item a:focus p {
-    color: #575962 !important;
+    color: #3c3d40 !important;
     font-weight: 600;
 }
 
@@ -846,7 +846,7 @@ body {
 
 .sidebar .nav>.nav-item a[data-toggle=collapse][aria-expanded=true] p,
 .sidebar[data-background-color="white"] .nav>.nav-item a[data-toggle=collapse][aria-expanded=true] p {
-    color: #575962;
+    color: #3c3d40;
 }
 
 .sidebar .nav>.nav-item a[data-toggle=collapse][aria-expanded=true] i,
@@ -1109,7 +1109,7 @@ body {
 .sidebar.sidebar-style-2 .nav .nav-item a:focus i,
 .sidebar.sidebar-style-2 .nav .nav-item a[data-toggle=collapse][aria-expanded=true] p,
 .sidebar.sidebar-style-2 .nav .nav-item a[data-toggle=collapse][aria-expanded=true] i {
-    color: #575962 !important;
+    color: #3c3d40 !important;
 }
 
 .sidebar.sidebar-style-2 .nav .nav-item.active a:before {
@@ -1122,7 +1122,7 @@ body {
 
 .sidebar.sidebar-style-2 .nav .nav-item .active a p,
 .sidebar.sidebar-style-2 .nav .nav-item .active a i {
-    color: #575962 !important;
+    color: #3c3d40 !important;
 }
 
 .sidebar.sidebar-style-2 .nav .nav-item.submenu {
@@ -1486,7 +1486,7 @@ body {
 }
 
 .page-with-aside .page-aside .aside-nav .nav>li.active>a {
-    color: #575962 !important;
+    color: #3c3d40 !important;
 }
 
 .page-with-aside .page-aside .aside-nav .nav>li>a {
@@ -3731,7 +3731,7 @@ body {
 }
 
 .breadcrumbs li a {
-    color: #575962;
+    color: #3c3d40;
     font-size: 13px;
 }
 
@@ -3938,7 +3938,7 @@ body {
 
 .card-title {
     margin: 0;
-    color: #575962;
+    color: #3c3d40;
     font-size: 20px;
     font-weight: 400;
     line-height: 1.6;
@@ -3947,7 +3947,7 @@ body {
 .card-title a,
 .card-title a:hover,
 .card-title a:focus {
-    color: #575962;
+    color: #3c3d40;
     text-decoration: none;
 }
 
@@ -3956,7 +3956,7 @@ body {
     margin: 5px 0 10px 0;
     font-size: .9rem;
     background: #f7f8fa;
-    color: #575962;
+    color: #3c3d40;
     padding: 0.85rem 1.5rem;
     border-radius: 4px;
     line-height: 1.82;
@@ -5005,7 +5005,7 @@ label {
 /*     Card Profile     */
 
 .card-profile {
-    color: #575962;
+    color: #3c3d40;
 }
 
 .card-profile .profile-picture {
@@ -5136,7 +5136,7 @@ label {
 .accordion .card {
     border-radius: 10px !important;
     background: #f7f7f7;
-    color: #575962;
+    color: #3c3d40;
     border: 0;
     box-shadow: none;
 }
@@ -5442,7 +5442,7 @@ label {
 .form-check [type="checkbox"]+.form-check-sign {
     position: relative;
     padding-left: 2em;
-    color: #575962;
+    color: #3c3d40;
     cursor: pointer;
 }
 
@@ -5541,7 +5541,7 @@ label {
 
 .form-radio [type="radio"]:not(:checked)+.form-radio-sign,
 .form-radio [type="radio"]:checked+.form-radio-sign {
-    color: #575962;
+    color: #3c3d40;
     position: relative;
     padding-left: 2em;
     cursor: pointer;
@@ -6466,7 +6466,7 @@ label.error {
 
 .nav.nav-line .nav-link {
     padding: 15px 20px;
-    color: #575962;
+    color: #3c3d40;
     border-width: 0px;
     font-size: 14px;
     font-weight: 600;
@@ -14421,7 +14421,7 @@ table.dataTable.stripe tbody > tr.selected {
 }
 
 .secondary-header .nav-bottom .page-navigation>.nav-item>.nav-link .menu-title {
-    color: #575962;
+    color: #3c3d40;
     font-weight: 600;
     font-size: 14px;
 }
@@ -14477,7 +14477,7 @@ table.dataTable.stripe tbody > tr.selected {
 }
 
 .secondary-header .nav-bottom .page-navigation>.nav-item ul li a {
-    color: #575962;
+    color: #3c3d40;
     font-size: 14px;
     position: relative;
     padding-left: 25px;
@@ -14984,7 +14984,7 @@ table.dataTable.stripe tbody > tr.selected {
 .kanban-title-button button {
     background: transparent;
     border: 0;
-    color: #575962;
+    color: #3c3d40;
     padding: 0;
     font-size: 16px;
     cursor: pointer;
